ParYAPL.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from ParYAPL.y
-----------------------------------------------------------------------------

state 3 contains 1 shift/reduce conflicts.
state 14 contains 1 shift/reduce conflicts.
state 27 contains 1 shift/reduce conflicts.
state 56 contains 1 reduce/reduce conflicts.
state 66 contains 1 shift/reduce conflicts.
state 112 contains 1 reduce/reduce conflicts.
state 114 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListTopDef                              (4)
	TopDef -> Ident ':' Block                          (5)
	TopDef -> Ident '(' ListArg '):' Block             (6)
	TopDef -> Expr                                     (7)
	TopDef -> ListItem ';'                             (8)
	Arg -> Ident                                       (9)
	ListArg ->                                         (10)
	ListArg -> Arg                                     (11)
	ListArg -> Arg ',' ListArg                         (12)
	ListTopDef -> TopDef                               (13)
	ListTopDef -> TopDef ListTopDef                    (14)
	Block -> '{' ListStmt '}'                          (15)
	ListStmt ->                                        (16)
	ListStmt -> Stmt ListStmt                          (17)
	Stmt -> ';'                                        (18)
	Stmt -> Block                                      (19)
	Stmt -> ListItem ';'                               (20)
	Stmt -> Ident '=' Expr ';'                         (21)
	Stmt -> Ident '++' ';'                             (22)
	Stmt -> Ident '--' ';'                             (23)
	Stmt -> 'return' Expr ';'                          (24)
	Stmt -> 'return' ';'                               (25)
	Stmt -> 'if' '(' Expr '):' Stmt                    (26)
	Stmt -> 'if' '(' Expr '):' Stmt 'else:' Stmt       (27)
	Stmt -> 'while' '(' Expr '):' Stmt                 (28)
	Stmt -> 'for' '(' Ident '=' Expr ';' 'to' Expr '):' Stmt   (29)
	Stmt -> Expr ';'                                   (30)
	Item -> Ident '=' Expr ';'                         (31)
	ListItem -> Item                                   (32)
	ListItem -> Item ',' ListItem                      (33)
	Expr6 -> Ident                                     (34)
	Expr6 -> Integer                                   (35)
	Expr6 -> 'true'                                    (36)
	Expr6 -> 'false'                                   (37)
	Expr6 -> Ident '(' ListExpr ')'                    (38)
	Expr6 -> String                                    (39)
	Expr6 -> '[' ']'                                   (40)
	Expr6 -> '(' Expr ')'                              (41)
	Expr5 -> '-' Expr6                                 (42)
	Expr5 -> '!' Expr6                                 (43)
	Expr5 -> Expr6                                     (44)
	Expr4 -> Expr4 MulOp Expr5                         (45)
	Expr4 -> Expr5                                     (46)
	Expr3 -> Expr3 AddOp Expr4                         (47)
	Expr3 -> Expr4                                     (48)
	Expr2 -> Expr2 RelOp Expr3                         (49)
	Expr2 -> Expr3                                     (50)
	Expr1 -> Expr2 '&&' Expr1                          (51)
	Expr1 -> Expr2                                     (52)
	Expr -> Expr1 '||' Expr                            (53)
	Expr -> Expr1                                      (54)
	ListExpr ->                                        (55)
	ListExpr -> Expr                                   (56)
	ListExpr -> Expr ',' ListExpr                      (57)
	AddOp -> '+'                                       (58)
	AddOp -> '-'                                       (59)
	MulOp -> '*'                                       (60)
	MulOp -> '/'                                       (61)
	MulOp -> '%'                                       (62)
	RelOp -> '<'                                       (63)
	RelOp -> '<='                                      (64)
	RelOp -> '>'                                       (65)
	RelOp -> '>='                                      (66)
	RelOp -> '=='                                      (67)
	RelOp -> '!='                                      (68)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'):'           { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	','            { PT _ (TS _ 11) }
	'-'            { PT _ (TS _ 12) }
	'--'           { PT _ (TS _ 13) }
	'/'            { PT _ (TS _ 14) }
	':'            { PT _ (TS _ 15) }
	';'            { PT _ (TS _ 16) }
	'<'            { PT _ (TS _ 17) }
	'<='           { PT _ (TS _ 18) }
	'='            { PT _ (TS _ 19) }
	'=='           { PT _ (TS _ 20) }
	'>'            { PT _ (TS _ 21) }
	'>='           { PT _ (TS _ 22) }
	'['            { PT _ (TS _ 23) }
	']'            { PT _ (TS _ 24) }
	'else:'        { PT _ (TS _ 25) }
	'false'        { PT _ (TS _ 26) }
	'for'          { PT _ (TS _ 27) }
	'if'           { PT _ (TS _ 28) }
	'return'       { PT _ (TS _ 29) }
	'to'           { PT _ (TS _ 30) }
	'true'         { PT _ (TS _ 31) }
	'while'        { PT _ (TS _ 32) }
	'{'            { PT _ (TS _ 33) }
	'||'           { PT _ (TS _ 34) }
	'}'            { PT _ (TS _ 35) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	TopDef          rules 5, 6, 7, 8
	Arg             rule  9
	ListArg         rules 10, 11, 12
	ListTopDef      rules 13, 14
	Block           rule  15
	ListStmt        rules 16, 17
	Stmt            rules 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30
	Item            rule  31
	ListItem        rules 32, 33
	Expr6           rules 34, 35, 36, 37, 38, 39, 40, 41
	Expr5           rules 42, 43, 44
	Expr4           rules 45, 46
	Expr3           rules 47, 48
	Expr2           rules 49, 50
	Expr1           rules 51, 52
	Expr            rules 53, 54
	ListExpr        rules 55, 56, 57
	AddOp           rules 58, 59
	MulOp           rules 60, 61, 62
	RelOp           rules 63, 64, 65, 66, 67, 68

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'!'            shift, and enter state 18
	'('            shift, and enter state 19
	'-'            shift, and enter state 20
	'['            shift, and enter state 21
	'false'        shift, and enter state 22
	'true'         shift, and enter state 23
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 24
	L_quoted       shift, and enter state 25

	Ident          goto state 3
	Integer        goto state 4
	String         goto state 5
	Program        goto state 6
	TopDef         goto state 7
	ListTopDef     goto state 8
	Item           goto state 9
	ListItem       goto state 10
	Expr6          goto state 11
	Expr5          goto state 12
	Expr4          goto state 13
	Expr3          goto state 14
	Expr2          goto state 15
	Expr1          goto state 16
	Expr           goto state 17

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!'            reduce using rule 1
	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'):'           reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	'false'        reduce using rule 1
	'true'         reduce using rule 1
	'||'           reduce using rule 1
	L_Ident        reduce using rule 1
	L_integ        reduce using rule 1
	L_quoted       reduce using rule 1
	%eof           reduce using rule 1


State 3

	TopDef -> Ident . ':' Block                         (rule 5)
	TopDef -> Ident . '(' ListArg '):' Block            (rule 6)
	Item -> Ident . '=' Expr ';'                        (rule 31)
	Expr6 -> Ident .                                    (rule 34)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 38)

	'!'            reduce using rule 34
	'!='           reduce using rule 34
	'%'            reduce using rule 34
	'&&'           reduce using rule 34
	'('            shift, and enter state 50
			(reduce using rule 34)

	'*'            reduce using rule 34
	'+'            reduce using rule 34
	'-'            reduce using rule 34
	'/'            reduce using rule 34
	':'            shift, and enter state 51
	'<'            reduce using rule 34
	'<='           reduce using rule 34
	'='            shift, and enter state 52
	'=='           reduce using rule 34
	'>'            reduce using rule 34
	'>='           reduce using rule 34
	'['            reduce using rule 34
	'false'        reduce using rule 34
	'true'         reduce using rule 34
	'||'           reduce using rule 34
	L_Ident        reduce using rule 34
	L_integ        reduce using rule 34
	L_quoted       reduce using rule 34
	%eof           reduce using rule 34


State 4

	Expr6 -> Integer .                                  (rule 35)

	'!'            reduce using rule 35
	'!='           reduce using rule 35
	'%'            reduce using rule 35
	'&&'           reduce using rule 35
	'('            reduce using rule 35
	')'            reduce using rule 35
	'):'           reduce using rule 35
	'*'            reduce using rule 35
	'+'            reduce using rule 35
	','            reduce using rule 35
	'-'            reduce using rule 35
	'/'            reduce using rule 35
	';'            reduce using rule 35
	'<'            reduce using rule 35
	'<='           reduce using rule 35
	'=='           reduce using rule 35
	'>'            reduce using rule 35
	'>='           reduce using rule 35
	'['            reduce using rule 35
	'false'        reduce using rule 35
	'true'         reduce using rule 35
	'||'           reduce using rule 35
	L_Ident        reduce using rule 35
	L_integ        reduce using rule 35
	L_quoted       reduce using rule 35
	%eof           reduce using rule 35


State 5

	Expr6 -> String .                                   (rule 39)

	'!'            reduce using rule 39
	'!='           reduce using rule 39
	'%'            reduce using rule 39
	'&&'           reduce using rule 39
	'('            reduce using rule 39
	')'            reduce using rule 39
	'):'           reduce using rule 39
	'*'            reduce using rule 39
	'+'            reduce using rule 39
	','            reduce using rule 39
	'-'            reduce using rule 39
	'/'            reduce using rule 39
	';'            reduce using rule 39
	'<'            reduce using rule 39
	'<='           reduce using rule 39
	'=='           reduce using rule 39
	'>'            reduce using rule 39
	'>='           reduce using rule 39
	'['            reduce using rule 39
	'false'        reduce using rule 39
	'true'         reduce using rule 39
	'||'           reduce using rule 39
	L_Ident        reduce using rule 39
	L_integ        reduce using rule 39
	L_quoted       reduce using rule 39
	%eof           reduce using rule 39


State 6

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 7

	ListTopDef -> TopDef .                              (rule 13)
	ListTopDef -> TopDef . ListTopDef                   (rule 14)

	'!'            shift, and enter state 18
	'('            shift, and enter state 19
	'-'            shift, and enter state 20
	'['            shift, and enter state 21
	'false'        shift, and enter state 22
	'true'         shift, and enter state 23
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 24
	L_quoted       shift, and enter state 25
	%eof           reduce using rule 13

	Ident          goto state 3
	Integer        goto state 4
	String         goto state 5
	TopDef         goto state 7
	ListTopDef     goto state 49
	Item           goto state 9
	ListItem       goto state 10
	Expr6          goto state 11
	Expr5          goto state 12
	Expr4          goto state 13
	Expr3          goto state 14
	Expr2          goto state 15
	Expr1          goto state 16
	Expr           goto state 17

State 8

	Program -> ListTopDef .                             (rule 4)

	%eof           reduce using rule 4


State 9

	ListItem -> Item .                                  (rule 32)
	ListItem -> Item . ',' ListItem                     (rule 33)

	','            shift, and enter state 48
	';'            reduce using rule 32


State 10

	TopDef -> ListItem . ';'                            (rule 8)

	';'            shift, and enter state 47


State 11

	Expr5 -> Expr6 .                                    (rule 44)

	'!'            reduce using rule 44
	'!='           reduce using rule 44
	'%'            reduce using rule 44
	'&&'           reduce using rule 44
	'('            reduce using rule 44
	')'            reduce using rule 44
	'):'           reduce using rule 44
	'*'            reduce using rule 44
	'+'            reduce using rule 44
	','            reduce using rule 44
	'-'            reduce using rule 44
	'/'            reduce using rule 44
	';'            reduce using rule 44
	'<'            reduce using rule 44
	'<='           reduce using rule 44
	'=='           reduce using rule 44
	'>'            reduce using rule 44
	'>='           reduce using rule 44
	'['            reduce using rule 44
	'false'        reduce using rule 44
	'true'         reduce using rule 44
	'||'           reduce using rule 44
	L_Ident        reduce using rule 44
	L_integ        reduce using rule 44
	L_quoted       reduce using rule 44
	%eof           reduce using rule 44


State 12

	Expr4 -> Expr5 .                                    (rule 46)

	'!'            reduce using rule 46
	'!='           reduce using rule 46
	'%'            reduce using rule 46
	'&&'           reduce using rule 46
	'('            reduce using rule 46
	')'            reduce using rule 46
	'):'           reduce using rule 46
	'*'            reduce using rule 46
	'+'            reduce using rule 46
	','            reduce using rule 46
	'-'            reduce using rule 46
	'/'            reduce using rule 46
	';'            reduce using rule 46
	'<'            reduce using rule 46
	'<='           reduce using rule 46
	'=='           reduce using rule 46
	'>'            reduce using rule 46
	'>='           reduce using rule 46
	'['            reduce using rule 46
	'false'        reduce using rule 46
	'true'         reduce using rule 46
	'||'           reduce using rule 46
	L_Ident        reduce using rule 46
	L_integ        reduce using rule 46
	L_quoted       reduce using rule 46
	%eof           reduce using rule 46


State 13

	Expr4 -> Expr4 . MulOp Expr5                        (rule 45)
	Expr3 -> Expr4 .                                    (rule 48)

	'!'            reduce using rule 48
	'!='           reduce using rule 48
	'%'            shift, and enter state 44
	'&&'           reduce using rule 48
	'('            reduce using rule 48
	')'            reduce using rule 48
	'):'           reduce using rule 48
	'*'            shift, and enter state 45
	'+'            reduce using rule 48
	','            reduce using rule 48
	'-'            reduce using rule 48
	'/'            shift, and enter state 46
	';'            reduce using rule 48
	'<'            reduce using rule 48
	'<='           reduce using rule 48
	'=='           reduce using rule 48
	'>'            reduce using rule 48
	'>='           reduce using rule 48
	'['            reduce using rule 48
	'false'        reduce using rule 48
	'true'         reduce using rule 48
	'||'           reduce using rule 48
	L_Ident        reduce using rule 48
	L_integ        reduce using rule 48
	L_quoted       reduce using rule 48
	%eof           reduce using rule 48

	MulOp          goto state 43

State 14

	Expr3 -> Expr3 . AddOp Expr4                        (rule 47)
	Expr2 -> Expr3 .                                    (rule 50)

	'!'            reduce using rule 50
	'!='           reduce using rule 50
	'&&'           reduce using rule 50
	'('            reduce using rule 50
	')'            reduce using rule 50
	'):'           reduce using rule 50
	'+'            shift, and enter state 41
	','            reduce using rule 50
	'-'            shift, and enter state 42
			(reduce using rule 50)

	';'            reduce using rule 50
	'<'            reduce using rule 50
	'<='           reduce using rule 50
	'=='           reduce using rule 50
	'>'            reduce using rule 50
	'>='           reduce using rule 50
	'['            reduce using rule 50
	'false'        reduce using rule 50
	'true'         reduce using rule 50
	'||'           reduce using rule 50
	L_Ident        reduce using rule 50
	L_integ        reduce using rule 50
	L_quoted       reduce using rule 50
	%eof           reduce using rule 50

	AddOp          goto state 40

State 15

	Expr2 -> Expr2 . RelOp Expr3                        (rule 49)
	Expr1 -> Expr2 . '&&' Expr1                         (rule 51)
	Expr1 -> Expr2 .                                    (rule 52)

	'!'            reduce using rule 52
	'!='           shift, and enter state 33
	'&&'           shift, and enter state 34
	'('            reduce using rule 52
	')'            reduce using rule 52
	'):'           reduce using rule 52
	','            reduce using rule 52
	'-'            reduce using rule 52
	';'            reduce using rule 52
	'<'            shift, and enter state 35
	'<='           shift, and enter state 36
	'=='           shift, and enter state 37
	'>'            shift, and enter state 38
	'>='           shift, and enter state 39
	'['            reduce using rule 52
	'false'        reduce using rule 52
	'true'         reduce using rule 52
	'||'           reduce using rule 52
	L_Ident        reduce using rule 52
	L_integ        reduce using rule 52
	L_quoted       reduce using rule 52
	%eof           reduce using rule 52

	RelOp          goto state 32

State 16

	Expr -> Expr1 . '||' Expr                           (rule 53)
	Expr -> Expr1 .                                     (rule 54)

	'!'            reduce using rule 54
	'('            reduce using rule 54
	')'            reduce using rule 54
	'):'           reduce using rule 54
	','            reduce using rule 54
	'-'            reduce using rule 54
	';'            reduce using rule 54
	'['            reduce using rule 54
	'false'        reduce using rule 54
	'true'         reduce using rule 54
	'||'           shift, and enter state 31
	L_Ident        reduce using rule 54
	L_integ        reduce using rule 54
	L_quoted       reduce using rule 54
	%eof           reduce using rule 54


State 17

	TopDef -> Expr .                                    (rule 7)

	'!'            reduce using rule 7
	'('            reduce using rule 7
	'-'            reduce using rule 7
	'['            reduce using rule 7
	'false'        reduce using rule 7
	'true'         reduce using rule 7
	L_Ident        reduce using rule 7
	L_integ        reduce using rule 7
	L_quoted       reduce using rule 7
	%eof           reduce using rule 7


State 18

	Expr5 -> '!' . Expr6                                (rule 43)

	'('            shift, and enter state 19
	'['            shift, and enter state 21
	'false'        shift, and enter state 22
	'true'         shift, and enter state 23
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 24
	L_quoted       shift, and enter state 25
